# MyNote

./: .gitignore  MyNote.md  NewMachine.md  README.md  csharp  task.md  常用命令.md
ApacheDjangoWsgi/: ApacheDjangoWsgi.md  apache-tutorial.md
AverageFace/: averageface.md
Batch/: fordir.bat
Kinect/: note.md
Kinect/cloudview/: CMakeLists.txt  cloudview.cpp
Kinect/depth2pointcloud/: CMakeLists.txt  cloudPairAlign.cpp  cloud_matrix_transform.cpp  cloud_transform.cpp  cloudviewrcolor.cpp  concatenate_clouds.cpp  csdndepth2cloud.cpp  depth2cloud.cpp  depth2cloudconfig.txt  depth2meshGY.cpp  depthFilter.cpp  note.md  recon_greedyProjection.cpp  recon_marchingCubes.cpp  recon_poisson.cpp  resampling.cpp  test.sh  trans.txt
Kinect/depth2pointcloud/depthHandle/: CMakeLists.txt  depthHandel.cpp  depthHandle.hpp
OpenFrameworks/: note.md
QT/: note.md
c_examlpe/: Makefile  Transmissionloss.txt  equalizerall.txt  linuxTestRun.sh  main.c  readme.md  wavetrans.h  wavfilter
c_examlpe/common/: complex.h  types.h
c_examlpe/fft/: fft.c
c_examlpe/wav2png/: waveform
c_examlpe/wave/: wave.c  wave.h
csharp/: csharp.md
py/: copyfile.py  note.md  note.py  py35.txt  py36.txt
sh/: copyfile.sh  readme.md  run-models.sh
sh/smartest/: readme.md  sda  smartest.sh  test.sh
